# WorldGame

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
include/: block_database.h  block_type.h  camera.h  chunk.h  chunk_map.h  chunk_mesh.h  chunk_renderer.h  chunk_shader.h  game.h  input_manager.h  mesh.h  model.h  perlin_generator.h  resource_manager.h  shader.h  texture.h  texture_array.h  world_mesh_builder.h
res/: default_shader.frag  default_shader.vert
src/: block_database.cpp  camera.cpp  chunk.cpp  chunk_map.cpp  chunk_mesh.cpp  chunk_renderer.cpp  chunk_shader.cpp  game.cpp  input_manager.cpp  main.cpp  model.cpp  perlin_generator.cpp  resource_manager.cpp  shader.cpp  texture.cpp  texture_array.cpp  world_mesh_builder.cpp
